# weighing-scale

./: .gitmodules  CMakeLists.txt  prj.conf
boards/: esp32.overlay  stm32_min_dev_black.overlay
src/: main.c  weighting.c  weighting.h
src/board/stm32f1/: pm.c
